# WiFi_ATH21

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  data.txt  gitini.cmd  pack.cmd  push.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ESP/: common_nonos.mk  settings.mk  user_main.c
ESP/mqtt_aht21/: .cproject  .project  MK.CMD  Makefile  _cproject.xml  _project.xml  bld.bat  description.txt  dev_notes.txt  sftp.bat  sftp.txt  subver.cfg
PC/: 05_25 _מעקב טמפרטורה ולחות.docx  GitHub Copilot.docx  HT_Projects.code-workspace  HT_Projects_README.md  SOW.txt  files.txt  install_mqtt_logger.sh  mqtt_logger&viewer.code-workspace  mqtt_logger.service  prep.sh
PC/HT_WebView/: CHANGELOG-v1.1.0.md  CHANGELOG-v1.2.0.md  CRITICAL-UPDATE-v1.2.0.md  DEPLOYMENT.md  INSTALL-FROM-ZIP.md  QUICK-START.md  QUICK-UPDATE.md  README.md  UPDATE-INSTRUCTIONS.md  api-server.js  check-install.bat  create-deployment-package.bat  deploy-package.json  deploy-server.cjs  deploy.bat  index.html  install-service.js  package-dev.json  package-lock.json  package.json  sample-data.csv  start-dev-server.bat  test-data.csv  uninstall-service.js  КАК-УСТАНОВИТЬ.md
PC/HTview/: dlllist.txt
PC/HTview/HT_view/: CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_NOTES.md  HT_view_en_IL.ts  KEYBOARD_SHORTCUTS.md  README_Distribution.txt  Readme1.md  build_all_fixed.bat  create_portable.bat  csvparser.cpp  csvparser.h  csvworker.cpp  csvworker.h  customticker.cpp  customticker.h  default_config.ini  deploy.bat  installer.nsi  license.txt  main.cpp  mainwindow.cpp  mainwindow.h  portable.bat
PC/HTview/HT_view/HT_View_Portable/: README.md  README_Portable.txt  config.ini
PC/HTview/HT_view/build-vscode/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
PC/HTview/HT_view/build-vscode/.cmake/api/v1/reply/: cache-v2-0dc11b4ba57d56c1ad58.json  cmakeFiles-v1-8784d99420c0310c32fa.json  codemodel-v2-8f1f48a87ef9d0aed27f.json  codemodel-v2-9a45f68f87f8dd6365f4.json  index-2025-09-07T12-43-35-0182.json  index-2025-09-08T09-30-40-0744.json  target-HT_view-Release-3c6a57c07de8190ee801.json  target-HT_view-Release-cca36ae28e74e793798c.json  target-HT_view_autogen-Release-4e329fef6e04345b69bd.json  target-HT_view_autogen_timestamp_deps-Release-c6c95e63d282f3dcba19.json  toolchains-v1-d797ffb050786961329d.json
PC/HTview/HT_view/build-vscode/.qt/: QtDeploySupport.cmake
PC/HTview/HT_view/build-vscode/HT_view_autogen/: deps  mocs_compilation.cpp
PC/HTview/HT_view/deploy/: README.md
PC/LOG/: Clean_room.csv  Clean_room_25_Aug.csv  Clean_room_Aug_25.csv  Clean_room_W34.csv  Clean_room_W35.csv  Clean_room_W36.csv  Clean_room__34_.csv  Clean_room___.csv  Dima_office.csv  Dima_office_25_Aug.csv  Dima_office_Aug_25.csv  Dima_office_W34.csv  Dima_office_W35.csv  Dima_office_W36.csv  Dima_office__34_.csv  Dima_office___.csv  HT_3C71BF28FBD8.csv  HT_3C71BF29A68E.csv  HT_3C71BF29A837.csv  HT_3C71BF29A89D_W36.csv  HT_3C71BF29AB79.csv  Lab.csv  Lab_25_Aug.csv  Lab_Aug_25.csv  Lab_W34.csv  Lab_W35.csv  Lab_W36.csv  Lab__34_.csv  Lab___.csv  Vica_office.csv  Vica_office_25_Aug.csv  Vica_office_Aug_25.csv  Vica_office_W34.csv  Vica_office_W35.csv  Vica_office_W36.csv  Vica_office__34_.csv  Vica_office___.csv  list.txt
PC/Report/: SOW.txt
PC/mqtt_logger/: Build.bat  CMakeLists.txt  CMakeLists_first.txt  Makefile  build.sh  config.ini  dlls.txt  fix_instructions.md  fixlib.cmd  install_dependencies.bat  list.txt  readme.md  readme_ru.md  setservice.cmd  startservice.cmd  stopservice.cmd  vscode_project.json  wsl.txt
PC/mqtt_logger/.cache/clangd/index/: config.cpp.16F3A13D53DD43CC.idx  config.h.871195145F2E2958.idx  logger.cpp.D132B62CFC2B5241.idx  logger.h.CD11E72C51BCC562.idx  main.cpp.8F7F9F69AB599532.idx  replace_macros.cpp.90280481CCA80A77.idx  replace_macros.h.AB0BE1AEA877B55A.idx
PC/mqtt_logger/build_lnx/: CMakeCache.txt  Makefile  cmake_install.cmake
PC/mqtt_logger/src/: config.cpp  config.h  logger.cpp  logger.h  main.cpp  replace_macros.cpp  replace_macros.h
Production/ESP/: mac.cmd  mac.txt
Schematic/: AHT21.DBK  AHT21.DSN  AHT21.opj
(+89 files in other folders)
